--- a/package.json
+++ b/package.json
@@ -9,17 +9,32 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/types/index.d.ts",
+        "default": "./dist/index.common.js"
+      }
+    }
+  },
   "scripts": {
     "lint": "eslint src/",
     "format": "prettier src/ --write",
     "build": "tsup",
-    "publish":  "npm login && npm publish"
+    "publish": "npm login && npm publish"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@swc/core": "^1.11.20",
     "eslint": "^9.24.0",
     "prettier": "^3.5.3",
+    "rollup": "^4.40.0",
+    "rollup-plugin-dts": "^6.2.1",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
