--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
     "strict": true,
     "sourceMap": true,
     "declaration": true,
-    "declarationDir": "dist/types",
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
+    "outDir": "dist",
+    "declarationDir": "dist/types",
     "emitDecoratorMetadata": true,
-    "outDir": "dist/lib",
     "typeRoots": [
       "node_modules/@types"
     ]
