--- a/package.json
+++ b/package.json
@@ -13,29 +13,30 @@
     ".": {
       "import": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/base.mjs"
+        "default": "./dist/index.mjs"
       },
       "require": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/base.js"
+        "default": "./dist/index.cjs"
       }
     },
     "./safe": {
       "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/safe.mjs"
+        "types": "./dist/safe/index.d.ts",
+        "default": "./dist/safe/index.mjs"
       },
       "require": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/safe.js"
+        "types": "./dist/safe/index.d.ts",
+        "default": "./dist/safe/index.cjs"
       }
     }
   },
   "scripts": {
     "lint": "eslint src/",
     "format": "prettier src/ --write",
-    "build": "rm -rf dist && rollup -c",
-    "publish": "npm login && npm publish"
+    "build": "rm -rf dist && rollup -c && yarn post-build",
+    "publish": "npm login && npm publish",
+    "post-build": "rm -rf dist/types && rm -rf dist/safe/types"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
@@ -45,6 +46,7 @@
     "prettier": "^3.5.3",
     "rollup": "^4.40.0",
     "rollup-plugin-dts": "^6.2.1",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.8.1",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
